# bayes-webapp

./: .buildpacks  .gitmodules  Dockerfile  README.md  backend.py  bayes.py  frontend.py  main.py  pyproject.toml  requirements.txt  test_conjugate_normal.py
templates/: index.html
